--- a/src/Components/App/NavigationBar/styles.css
+++ b/src/Components/App/NavigationBar/styles.css
@@ -1,3 +1,10 @@
+.navBar{
+    width: 736.99px;
+    height: 36.5px;
+    margin: auto;
+    margin-top: 58px;
+}
+
 .navBar, .options{
     display: flex;
     justify-content: space-between;
@@ -9,68 +16,19 @@
     position: relative;
 }
 
-.fontOptions{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
-}
-
-.fontChoosen{
-    text-align: center;
-    width: 70px
-}
-
 .divisor{
     background-color: rgb(202, 202, 202);
     width: 1px;
     height: 30px;
 }
 
-.lightSwitch{
-    background-color: purple;
-    width: 40px;
+
+.moon{
+    width: 20px;
     height: 20px;
-    border-radius: 30px;
-    position: relative;
-    cursor: pointer;
 }
 
-.head{
-    background-color: white;
-    border-radius: 100%;
-    width: 16px;
-    height: 16px;
-    position: absolute;
-    left: 3px;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    pointer-events: none;
-    transition: left 0.2s linear;
-}
-
-.popup{
-    position: absolute;
-    top: 50px;
-    left: -60px;
-    padding: 15px;
-    width: 120px;
-    height: 100px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px black;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-.popup p{
-    margin: 0px;
-    cursor: pointer;
-}
-
-.popup p:hover{
-    color: purple;
+.logo{
+    width: 32px;
+    height: 36.5px;
 }
