--- a/src/Components/App/Content/Header/styles.css
+++ b/src/Components/App/Content/Header/styles.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     height: 114px;
-    margin: 30px 0 0 0;
     width: 100%;
+    margin-bottom: 40px;
 }
 
 .title_phonetic{
