--- a/src/Components/App/Content/styles.css
+++ b/src/Components/App/Content/styles.css
@@ -1,7 +1,4 @@
 .content{
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin: 0px;
+    margin: 45px 0 0 0;
 }
