--- a/src/Components/App/NavigationBar/FontOptions/styles.css
+++ b/src/Components/App/NavigationBar/FontOptions/styles.css
@@ -3,7 +3,7 @@
     position: relative;
 }
 
-.fontOptions{
+.fontOptionsButton{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -11,6 +11,9 @@
     cursor: pointer;
     width: 120px;
     height: 24px;
+    border: none;
+    background-color: transparent;
+    padding: 0px;
 }
 
 
@@ -19,6 +22,7 @@
     font-weight: bold;
     font-size: 18px;
     text-align: right;
+    pointer-events: none;
 }
 
 #choosen{
@@ -28,6 +32,7 @@
 .arrowDown{
     width: 12px;
     height: 6px;
+    pointer-events: none;
 }
 
 
@@ -39,14 +44,14 @@
     left: -90px;
     width: 183px;
     height: 152px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px #979797;
+    border-radius: 16px;
+    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
     display: none;
     justify-content: flex-start;
     align-items: center;
 }
 
-.content{
+.popup_content{
     margin-left: 20px;
     width: 90px;
     height: 104px;
