--- a/src/Components/App/styles.css
+++ b/src/Components/App/styles.css
@@ -1,27 +1,32 @@
 @font-face {
+    font-family: "Inter-bold";
+    src: url(./../FontFiles/Inter-Bold.ttf)
+}
+
+@font-face {
     font-family: "Inconsolata";
     src: url(./../FontFiles/Inconsolata-VariableFont_wdth\,wght.ttf);
 }
 @font-face {
-    font-family: "Inter-variable-font";
+    font-family: "Inter";
     src: url(./../FontFiles/Inter-VariableFont_slnt\,wght.ttf);
 }
 
 @font-face {
-    font-family: "Lora-Italic";
-    src: url(./../FontFiles/Lora-Italic-VariableFont_wght.ttf);
+    font-family: "Lora";
+    src: url(./../FontFiles/Lora-VariableFont_wght.ttf);
 }
 
-@font-face {
-    font-family: "Lora-Variable";
-    src: url(./../FontFiles/Lora-VariableFont_wght.ttf);
+body{
+    font-family: "Inter";
+    min-height: 100vh;
+    margin: 0px;
 }
 
 .app{
     width: 737px;
     margin: auto;
 }
-
 
 :root{
     --close: 50;
