--- a/src/Components/App/styles.css
+++ b/src/Components/App/styles.css
@@ -18,8 +18,9 @@
 }
 
 :root{
-    --color-black: black;
+    --color-black: #2D2D2D;
     --color-white: white;
+    
     --close: 50;
     --far: 10;
 }
@@ -41,7 +42,7 @@ ul li{
     margin-bottom: 13px;
     line-height: 24px;
     font-size: 18px;
-    color: #2D2D2D;
+    color: var(--text-color);
     font-weight: 400;
 }
 
