--- a/src/Components/App/Content/Definitions/Source/styles.css
+++ b/src/Components/App/Content/Definitions/Source/styles.css
@@ -6,12 +6,15 @@
 }
 
 .source_Link{
+    display: inline-block;
+    font-family: var(--font-choosen);
     color: var(--text-color);
     align-self: center;
     font-size: 14px;
 }
 
 .source_Title{
+    font-family: var(--font-choosen);
     font-size: 14px;
     margin: 0px;
     color: #757575;
@@ -28,4 +31,14 @@
     width: 12px;
     height: 12px;
     margin-left: 9px; 
+}
+
+@media(max-width: 535px){
+    .source{
+        flex-direction: column;
+        gap: 8px;
+    }
+    .source_Link{
+        align-self: flex-start;
+    }
 }
