--- a/src/Components/App/Content/Message/styles.css
+++ b/src/Components/App/Content/Message/styles.css
@@ -3,13 +3,14 @@
     width: 100%;
     height: 204px;
 }
-
 .icon_face{
+    color: var(--text-color);
     text-align: center;
     margin-bottom: 44px;
 }
-
 .message_title{
+    font-family: var(--font-choosen);
+    color: var(--text-color);
     margin: 0px;
     font-size: 20px;
     font-weight: 700;
@@ -17,9 +18,20 @@
     margin-bottom: 24px;
 }
 .message{
+    font-family: var(--font-choosen);
     color: #757575;
     font-size: 18px;
     font-weight: 400;
     text-align: center;
     margin: auto;
+}
+
+@media(max-width: 535px){
+    .message_title{
+        font-size: 18px;
+    }
+
+    .message{
+        font-size: 16px;
+    }
 }
