--- a/src/Components/App/NavigationBar/FontOptions/styles.css
+++ b/src/Components/App/NavigationBar/FontOptions/styles.css
@@ -5,7 +5,7 @@
 
 .fontOptionsButton{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
     gap: 10px;
     cursor: pointer;
@@ -18,6 +18,8 @@
 
 
 .fontChoosen{
+    font-family: var(--font-choosen);
+    color: var(--text-color);
     text-align: center;
     font-weight: bold;
     font-size: 18px;
@@ -38,20 +40,22 @@
 
 .popup{
     z-index: var(--close);
-    background-color: white;
+    background-color: var(--bg-color);
     position: absolute;
     top: 40px;
     left: -90px;
     width: 183px;
     height: 152px;
     border-radius: 16px;
-    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 30px var(--box-shadow);
     display: none;
     justify-content: flex-start;
     align-items: center;
 }
 
 .popup_content{
+    color: var(--text-color);
+    background-color: var();
     margin-left: 20px;
     width: 90px;
     height: 104px;
@@ -62,10 +66,20 @@
 }
 
 .popup p{
+    font-family: var(--font-choosen);
     margin: 0px;
     cursor: pointer;
 }
 
-.popup p:hover:not(#choosen){
+.popup p:hover{
     color: #A445ED;
+}
+
+@media(max-width: 535px){
+    .fontChoosen, .popup_content{
+        font-size: 14px
+    }
+    .popup{
+        left: -50px;
+    }
 }
