--- a/src/Components/App/SearchBar/styles.css
+++ b/src/Components/App/SearchBar/styles.css
@@ -1,11 +1,13 @@
 .wrapper{
     z-index: var(--far);
-    width: 736px;
+    width: 100%;
     height: 64px;
     margin: 40px auto 45px auto;
     position: relative;
+    transition: height 0.2s linear;
 }
 .searchBox{
+    font-family: var(--font-choosen);
     width: 100%;
     height: 100%;
     border-radius: 16px;
@@ -41,6 +43,7 @@
     position: absolute;
     right: 20px;
     top: 25px;
+    transition: top 0.2s linear;
 }
 
 .invalidMessage{
@@ -51,4 +54,18 @@
     top: 40px;
     left: 0px;
     display: none;
+}
+
+@media(max-width: 535px){
+    .searchBox{
+        font-size: 16px;
+    }
+
+    .wrapper{
+        height: 48px;
+    }
+
+    .searchIcon{
+        top: 15px;
+    }
 }
