--- a/src/Components/App/Content/Definitions/PartsOfSpeech/styles.css
+++ b/src/Components/App/Content/Definitions/PartsOfSpeech/styles.css
@@ -31,7 +31,7 @@
     height: 1px; 
     width: 100%;
     align-self: center;
-    background-color: #E9E9E9;
+    background-color: var(--divider-line);
 }
 
 .quote{
@@ -76,11 +76,9 @@
     .heading_title{
         font-size: 18px;
     }
-
     .MeaningTitle{
         font-size: 16px;
     }
-
     .synonymsTitle, .synonymsLink{
         font-size: 16px;
     }
