--- a/src/Components/App/NavigationBar/FontOptions/styles.css
+++ b/src/Components/App/NavigationBar/FontOptions/styles.css
@@ -18,6 +18,7 @@
 
 
 .fontChoosen{
+    white-space: nowrap;
     font-family: var(--font-choosen);
     color: var(--text-color);
     text-align: center;
